apps/production/portifolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portifolio
  namespace: production
spec:
  selector:
    matchLabels:
      app: portifolio
  template:
    metadata:
      labels:
        app: portifolio
    spec:
      containers:
      - name: portifolio
        image: harbor.kub3.dev/gomesdev/portifolio:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portifolio-service
  namespace: production
spec:
  selector:
    app: portifolio
  ports:
  - port: 80
    targetPort: 80
