apps/production/portifolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-protifolio-host
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "gomes.dev"
    secretName: protifolio-letsencrypt-crt
  rules:
  - host: gomes.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: portifolio-service
            port: 
              number: 80
